# canard

./: .gitignore  README.md  php_server
cpp/canard/: CMakeLists.txt  main.cpp
cpp/canard/core/: context.cpp  context.h  function.cpp  function.h  macros.h  matcher.cpp  matcher.h  namespace.cpp  namespace.h  pool.cpp  pool.h  session.cpp  session.h  specialization.cpp  specialization.h
cpp/canard/parser/: lexer.cpp  lexer.h  message.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h
cpp/canard/searcher/: query.cpp  query.h  searcher.cpp  searcher.h
cpp/canard/src/: Application.cpp  Application.h  main.cpp
cpp/canard/src/core/: Context.cpp  Context.h  Formatter.cpp  Formatter.h  Function.cpp  Function.h  FunctionPool.cpp  FunctionPool.h  Matcher.cpp  Matcher.h  Namespace.cpp  Namespace.h  Session.cpp  Session.h  Specialization.cpp  Specialization.h  Telescope.cpp  Telescope.h  macros.h
cpp/canard/src/data/: Context.cpp  Context.h  Namespace.cpp  Namespace.h  Session.cpp  Session.h
cpp/canard/src/formatter/: EnglishFormatter.cpp  EnglishFormatter.h
cpp/canard/src/interpreter/: Context.cpp  Formatter.cpp  Formatter.h  Metadata.cpp  Metadata.h  Namespace.cpp  Namespace.h  Session.cpp  Session.h  Structure.cpp  Structure.h
cpp/canard/src/parser/: Formatter.cpp  Formatter.h  Lexer.cpp  Lexer.h  Message.cpp  Message.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h
cpp/canard/src/searcher/: DebugSearcher.cpp  DebugSearcher.h  Index.cpp  Index.h  Query.cpp  Query.h  Searcher.cpp  Searcher.h  ThreadManager.cpp  ThreadManager.h
doc/: identifiers
java/canard/: algebraic_geometry.txt  commutative_algebra.txt  debug.txt  json-messages.txt  local_properties.txt  logic.txt  main.txt  pom.xml  scratch.txt  search_tests.txt  test.txt  tests.txt  tex-structure.txt  todo.txt  website-structure.txt
math/: algebraic_geometry.txt  commutative_algebra.txt  local_properties.txt  logic.cnd  main.cnd  main.txt  search_tests.cnd
math/algebraic_geometry/: algebraic_geometry.cnd  examples.cnd  main.cnd  sheaf.cnd  theorems.cnd  toric.cnd
math/category_theory/: main.cnd
math/commutative_algebra/: algebra.cnd  commutative_algebra.cnd  examples.cnd  main.cnd  monoid.cnd  theorems.cnd
math/debug/: search_tests.cnd
math/group_theory/: examples.cnd  group.cnd  group_theory.cnd  main.cnd  theorems.cnd
math/linear_algebra/: fan.cnd  main.cnd
math/set_theory/: set.cnd
math/topology/: examples.cnd  space.cnd  theorems.cnd  topology.cnd
scripts/: --list_identifiers.py  compile_tex.sh  gen_doc.py  gen_docs.sh  list_identifiers.sh  obtain_identifiers.sh
scripts/python/: convert.ipynb  convert.py  (+2 more)
tests/: test_1.cnd  test_2.cnd  test_3.cnd  test_4.cnd  test_5.cnd  test_6.cnd  test_7.cnd
tex/: algebraic_geometry.tex
web/: advanced-help.html  advanced-help.php  advanced.html  advanced.php  doc.html  docs.html  docs.php  index.html  index.php  proposals.php  propose.php  search-help.html  search-help.php  search.html  search.php
(+116 files in other folders)
